--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,12 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "plugins": [
+      {
+        "name": "expo-router"
+      }
+    ]
   },
   "include": [
     "**/*.ts",
